--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "churnzero-analytics",
   "version": "2.0.0",
   "description": "ChurnZero Analytics and Succes Panel library",
-  "main": "analytics.js",
+  "main": "dist/analytics.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "version": "git add -A dist",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
